working on issue with custom colors

--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -24,14 +24,14 @@
             <form th:action="@{/login}" method="post" class="flex flex-col">
                 <div class="mb-6 pt-3 rounded bg-grayCustom-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="username">Username</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="username" name="username" type="text" />
+                    <input class="bg-lightGrayCustom rounded w-full text-blackCustom focus:outline-none border-b-4 border-greenCustom transition duration-500 px-3 pb-3 quicksand" id="username" name="username" type="text" />
                 </div>
                 <div class="mb-6 pt-3 rounded bg-grayCustom-200">
                     <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
+                    <input class="bg-lightGrayCustom rounded w-full text-blackCustom focus:outline-none border-b-4 border-greenCustom transition duration-500 px-3 pb-3 quicksand" id="password" name="password" type="password" />
                 </div>
                 <div class="text-center">
-                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded hover:text-blackCustom shadow-lg hover:shadow-xl transition duration-200 montserrat mb-5" type="submit" value="Log In" />
+                    <input class="bg-darkGreenCustom hover:bg-greenCustom text-whiteCustom font-bold p-2 rounded hover:text-blackCustom shadow-lg hover:shadow-xl transition duration-200 montserrat mb-5" type="submit" value="Log In" />
                 </div>
             </form>
         </section>
