--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -29,20 +29,20 @@
 
         <section class="mt-10">
             <form th:action="@{/sign-up}" method="POST" th:object="${user}" class="flex flex-col">
-               <div class="mb-6 pt-3 rounded bg-grayCustom-200">
-                    <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="username">Username</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="username" th:field="*{username}" />
+               <div class="mb-6 pt-3 rounded">
+                    <label class="block text-grayCustom text-sm font-bold mb-2 ml-3 montserrat" for="username">Username</label>
+                    <input class="bg-lightGrayCustom rounded w-full text-grayCustom focus:outline-none border-b-4 border-greenCustom transition duration-500 px-3 pb-3 quicksand" id="username" th:field="*{username}" />
                </div>
-                <div class="mb-6 pt-3 rounded bg-gray-200">
-                    <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="email">Email</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="email" th:field="*{email}" />
+                <div class="mb-6 pt-3 rounded">
+                    <label class="block text-grayCustom text-sm font-bold mb-2 ml-3 montserrat" for="email">Email</label>
+                    <input class="bg-lightGrayCustom rounded w-full text-grayCustom focus:outline-none border-b-4 border-greenCustom transition duration-500 px-3 pb-3 quicksand" id="email" th:field="*{email}" />
                 </div>
-                <div class="mb-6 pt-3 rounded bg-gray-200">
-                    <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
-                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-greenCustom-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3 quicksand" id="password" type="password" th:field="*{password}" />
+                <div class="mb-6 pt-3 rounded">
+                    <label class="block text-grayCustom text-sm font-bold mb-2 ml-3 montserrat" for="password">Password</label>
+                    <input class="bg-lightGrayCustom rounded w-full text-grayCustom focus:outline-none border-b-4 border-greenCustom transition duration-500 px-3 pb-3 quicksand" id="password" type="password" th:field="*{password}" />
                 </div>
                 <div class="text-center">
-                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold p-2 rounded shadow-lg hover:shadow-xl hover:text-blackCustom transition duration-200 montserrat mb-5" value="Sign me up!" type="submit" />
+                    <input class="bg-darkGreenCustom hover:bg-greenCustom text-whiteCustom font-bold p-2 rounded shadow-lg hover:shadow-xl hover:text-blackCustom transition duration-200 montserrat mb-5" value="Sign me up!" type="submit" />
                 </div>
             </form>
         </section>
