--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="flex-box sm:flex-col flex-wrap lg:grid lg:grid-cols-3 m-1">
-    <div th:each="post : ${posts}" class="inline-block m-1 flex-none flex-wrap col-span-1 row-span-2 border border-gray-400 lg:border-gray-400 bg-white rounded p-4 flex flex-col justify-between leading-normal">
+    <div th:each="post : ${posts}" class="inline-block m-1 flex-none flex-wrap col-span-1 row-span-2 border border-gray-400 lg:border-gray-400 bg-white rounded p-4 flex flex-col justify-between leading-normal bg-lightGrayCustom">
         <img class="h-48 lg:w-auto lg:h-48 lg:w-auto flex-none bg-cover rounded text-center overflow-hidden" src="img/orange.jpg" alt="blog_header">
     <!--        <img class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" src="img/orange.jpg">-->
         <div class="mb-8 flex-col">
