feat: testing gradients

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gradient-to-r from-darkGreenCustom to-greenCustom">
+<body class="bg-gradient-to-r from-lightGrayCustom via-grayCustom to-lightGrayCustom">
 
 <div class="w-full">
     <nav th:fragment="navbar" class="bg-blackCustom flex justify-between">
