--- a/src/main/resources/static/css/tailwind.css
+++ b/src/main/resources/static/css/tailwind.css
@@ -605,6 +605,18 @@ video {
   font-family: 'Quicksand', sans-serif;
 }
 
+.container {
+  max-width: 750px;
+}
+
+h1 {
+  font-family: Rockwell, cursive;
+}
+
+p {
+  margin: 25px;
+}
+
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
