--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -18,12 +18,12 @@
 
 <!--<header th:include="partials/header" :: header></header>-->
 
-<div class='container text-center'>
-    <h1>Random Quotes Rewritten</h1>
-    <p>These are some random quotes from <a href="https://forismatic.com/" target='_blank'>forismatic.com</a>. I hope you enjoy them!</p>
-    <button class='btn btn-success'>New Quote</button>
-    <p id='random_quote'></p>
-</div>
+<!--<div class='container text-center'>-->
+<!--    <h1>Random Quotes Rewritten</h1>-->
+<!--    <p>These are some random quotes from <a href="https://forismatic.com/" target='_blank'>forismatic.com</a>. I hope you enjoy them!</p>-->
+<!--    <button class='btn btn-success'>New Quote</button>-->
+<!--    <p id='random_quote'></p>-->
+<!--</div>-->
 
 <div class="mt-3 mb-3">
     <p class="text-3xl mb-2 text-center montserrat">Browse XPeriences</p>
