feat: fixing navbar height issue

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -36,9 +36,9 @@
                     </button>
                 </form>
             </li>
-            <li class="p-1.5">
-                <p class="text-whiteCustom"> || </p>
-            </li>
+<!--            <li class="p-1.5">-->
+<!--                <p class="text-whiteCustom"> || </p>-->
+<!--            </li>-->
             <li class="border-double p-1.5">
               <form th:action="@{/login}">
                     <button class="text-whiteCustom">LOGIN</button>
