--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -27,8 +27,8 @@
     h1 {
         font-family: Rockwell, cursive;
     }
-    p {
-        margin: 25px;
-    }
+    /*p {*/
+    /*    margin: 25px;*/
+    /*}*/
 
 }
