--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -43,7 +43,7 @@
         <hr>
         <section class="text-center">
             <div class="max-w-lg mx-auto flex justify-center text-center text-blackCustom mt-2">
-                <p class="justify-center montserrat">Don't have an account? </p><a th:href="@{|/sign-up|}" class="font-bold hover:underline quicksand"> Sign Up!</a>
+                <p class="justify-center montserrat">Don't have an account? </p><a th:href="@{|/sign-up|}" class="pl-1 font-bold hover:underline quicksand"> Sign Up!</a>
             </div>
         </section>
         <!--<div th:if="${param.logout}">-->
