--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -55,7 +55,7 @@
         <hr>
         <section class="text-center">
             <div class="max-w-lg mx-auto flex justify-center text-blackCustom mt-3">
-                <p class="justify-center montserrat">Already have an account? </p><a th:href="@{|/login|}" class="font-bold hover:underline quicksand"> Sign Up!</a>
+                <p class="justify-center montserrat">Already have an account? </p><a th:href="@{|/login|}" class="pl-1 font-bold hover:underline quicksand"> Sign Up!</a>
             </div>
         </section>
 
