feat: forgot to run npm build

--- a/src/main/resources/static/css/tailwind.css
+++ b/src/main/resources/static/css/tailwind.css
@@ -613,9 +613,11 @@ h1 {
   font-family: Rockwell, cursive;
 }
 
-p {
-  margin: 25px;
-}
+/*p {*/
+
+/*    margin: 25px;*/
+
+/*}*/
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
