--- a/src/main/resources/templates/related-books.html
+++ b/src/main/resources/templates/related-books.html
@@ -23,5 +23,7 @@
 </div>
 <div id="result"></div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/js.js"></script>
 </body>
 </html>
