--- a/src/main/resources/templates/related-books.html
+++ b/src/main/resources/templates/related-books.html
@@ -21,7 +21,7 @@
         <button class="btn red">Search Books</button>
     </form>
 </div>
-<div id="result"></div>
+<div class="flex flex-row" id="result"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/js.js"></script>
