--- a/src/main/resources/templates/related-books.html
+++ b/src/main/resources/templates/related-books.html
@@ -9,20 +9,32 @@
     <title>Home</title>
 </head>
 <body>
+<nav th:include="partials/navbar" :: navbar></nav>
 
-<h1 class="text-center">Search for Career-Related Books</h1>
+<main>
+    <h1 class="flex justify-center montserrat">Search for Career-Related Books</h1>
 
-<div id="search" class="#f5f5f5 grey lighten-4 z-depth-5">
-    <form id="myform">
-        <div class="input-field">
-            <input type="search" id="books">
-            <label for="search">Search Books</label>
+    <div class="form">
+        <div id="search" class="#f5f5f5 grey lighten-4 z-depth-5">
+            <form id="myform">
+                <div class="input-field">
+                    <input type="search" id="books">
+                    <label for="search">Search Books</label>
+                </div>
+    <!--            <button class="btn red">Search Books</button>-->
+            </form>
         </div>
-        <button class="btn red">Search Books</button>
-    </form>
-</div>
-<div class="flex flex-row" id="result"></div>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <h1 class="flex justify-center montserrat">Search Results:</h1>
 
+
+    <div class="books flex">
+        <div class="quicksand" id="result"></div>`
+    </div>
+</main>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/js.js"></script>
 </body>
