feat: testing design

--- a/src/main/resources/templates/related-books.html
+++ b/src/main/resources/templates/related-books.html
@@ -31,8 +31,8 @@
     <h1 class="flex justify-center montserrat">Search Results:</h1>
 
 
-    <div class="books flex">
-        <div class="quicksand" id="result"></div>`
+    <div class="books flex max-w-full">
+        <div class="quicksand max-w-1/3" id="result"></div>`
     </div>
 </main>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
