feat: changed header

--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header th:fragment="header" class="flex justify-around">
-    <h1 class="border border-black p-0.5 m-1">Welcome to Blogger!</h1>
+    <h1 class="border border-black p-0.5 m-1">Welcome to XPerience!</h1>
 </header>
 
 </body>
